--- a/TopHap/pom.xml
+++ b/TopHap/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <rest-assured.version>4.2.0</rest-assured.version>
+        <cucumber.version>6.1.0</cucumber.version>
     </properties>
 
     <dependencies>
@@ -25,6 +26,19 @@
             <version>20190722</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
